# pal-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  code_quality_checks.sh  config.py  pyproject.toml  release-please-config.json  run-server.sh  server.py
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: claude-code-review.yml  claude.yml  docker-pr.yml  enforce-conventional-commits.yml  release-please.yml  renovate.yml  test.yml
clink/agents/: base.py
conf/: custom_models.json  gemini_models.json  openai_models.json  opencode_go_models.json  openrouter_models.json
conf/cli_clients/: gemini.json
docs/: architecture.md  configuration.md  contributions.md  getting-started.md  index.md  testing.md  wsl-setup.md
docs/tools/: clink.md  jules.md
providers/: azure_openai.py  base.py  custom.py  dial.py  gemini.py  openai.py  openai_compatible.py  opencode_go.py  openrouter.py  registry.py  xai.py
providers/registries/: opencode_go.py
providers/shared/: provider_type.py
systemprompts/: __init__.py  jules_prompt.py
tests/: conftest.py  mock_helpers.py  test_alias_target_restrictions.py  test_async_concurrency.py  test_auto_mode.py  test_auto_mode_comprehensive.py  test_auto_mode_provider_selection.py  test_auto_model_planner_fix.py  test_azure_openai_provider.py  test_chat_codegen_integration.py  test_chat_simple.py  test_clink_progress.py  test_consensus.py  test_context_builder.py  test_conversation_memory.py  test_custom_openai_temperature_fix.py  test_custom_provider.py  test_dial_provider.py  test_docker_implementation.py  test_intelligent_fallback.py  test_issue_245_simple.py  test_jules.py  test_large_prompt_handling.py  test_listmodels.py  test_model_enumeration.py  test_model_resolution.py  test_model_restrictions.py  test_o3_temperature_fix_simple.py  test_openai_provider.py  test_opencode_go_provider.py  test_openrouter_provider.py  test_openrouter_registry.py  test_openrouter_store_parameter.py  test_per_tool_model_defaults.py  test_progress.py  test_provider_contract.py  test_provider_from_env.py  test_provider_retry_logic.py  test_provider_routing_bugs.py  test_provider_utf8.py  (+5 more)
tools/: __init__.py  analyze.py  chat.py  codereview.py  consensus.py  debug.py  docgen.py  jules.py  listmodels.py  precommit.py  refactor.py  secaudit.py  testgen.py  thinkdeep.py  tracer.py  version.py
tools/shared/: base_tool.py
tools/simple/: base.py
tools/workflow/: workflow_mixin.py
utils/: context_builder.py  conversation_memory.py  file_utils.py  model_resolution.py  progress.py  storage_backend.py
