[project]
name = "pal-mcp-server"
version = "10.1.0"
description = "AI-powered MCP server with multiple model providers"
requires-python = ">=3.10"
dependencies = [
    "mcp~=1.27",
    "google-genai~=2.6",
    "openai~=2.38",
    "pydantic~=2.13",
    "python-dotenv~=1.2",
]

[project.scripts]
pal-mcp-server = "server:run"

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-mock~=3.15",
    "ruff~=0.15",
    "ty>=0.0.39",
]

[tool.setuptools.packages.find]
include = ["tools*", "providers*", "systemprompts*", "utils*", "conf*", "clink*"]

[tool.setuptools]
py-modules = ["server", "config"]

[tool.setuptools.package-data]
"*" = [
    "conf/*.json",
    "conf/cli_clients/*.json",
    "systemprompts/clink/*.txt",
]

[tool.setuptools.data-files]
"conf" = [
    "conf/custom_models.json",
    "conf/openrouter_models.json",
    "conf/azure_models.json",
    "conf/openai_models.json",
    "conf/gemini_models.json",
    "conf/xai_models.json",
    "conf/dial_models.json",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    ".pal_venv",
    "test_simulation_files",
    "logs",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (replaces standalone isort)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # exception handling with raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ty.src]
exclude = [
    ".pal_venv",
    "test_simulation_files",
    "logs",
    "dist",
    "build",
]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests as integration tests that make real API calls with local-llama (free to run)",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
